Finished API module OpenAPI modifications.
