# service/api/api-comments.go
@@ -2,198 +2,234 @@ package api
 
 import (
 	"encoding/json"
-	"fmt"
+	"errors"
 	"net/http"
 
 	"github.com/aleiis/WASAPhoto/service/api/reqcontext"
 	"github.com/julienschmidt/httprouter"
 )
 
+const maxCommentCount = 100000
+
 type Comment struct {
+	Owner   User          `json:"owner"`
+	Photo   GlobalPhotoId `json:"photo"`
+	Id      int64         `json:"id"`
+	Content string        `json:"content"`
+}
+
+type CommentRequest struct {
 	Owner   int64  `json:"owner"`
 	Content string `json:"content"`
 }
 
-type ResolvedComment struct {
-	User    string `json:"user"`
-	Content string `json:"content"`
+type PhotoComments struct {
+	Comments []Comment `json:"comments"`
 }
 
 func (rt *_router) commentPhotoHandler(w http.ResponseWriter, r *http.Request, ps httprouter.Params, ctx reqcontext.RequestContext) {
 
 	// Get the parameters
-	var ownerId, photoId int64
+	var photoOwner, photoId int64
 	if params, err := checkIds(ps.ByName("userId"), ps.ByName("photoId")); err != nil {
-		w.WriteHeader(http.StatusBadRequest)
+		http.Error(w, "Missing or invalid parameters.", http.StatusBadRequest)
 		return
 	} else {
-		ownerId, photoId = params[0], params[1]
+		photoOwner, photoId = params[0], params[1]
 	}
 
 	// Decode the user ID of comment owner and the content of the comment from the body of the request
-	var comment Comment
-	if err := json.NewDecoder(r.Body).Decode(&comment); err != nil {
-		fmt.Println(err)
-		w.WriteHeader(http.StatusBadRequest)
+	var commentRequest CommentRequest
+	if err := json.NewDecoder(r.Body).Decode(&commentRequest); err != nil {
+		http.Error(w, "Invalid request body.", http.StatusBadRequest)
 		return
 	}
 
 	// Authorization check
-	if !checkBearer(r.Header.Get("Authorization"), comment.Owner) {
-		w.WriteHeader(http.StatusUnauthorized)
+	if !checkBearer(r.Header.Get("Authorization"), commentRequest.Owner) {
+		http.Error(w, "Unauthorized.", http.StatusUnauthorized)
 		return
 	}
 
 	// Check if the photo exists
-	if exists, err := rt.db.PhotoExists(ownerId, photoId); err != nil {
+	if exists, err := rt.db.PhotoExists(photoOwner, photoId); err != nil {
 		ctx.Logger.WithError(err).Error("can't check if the photo exists")
-		w.WriteHeader(http.StatusInternalServerError)
+		http.Error(w, "Error checking if the photo exists.", http.StatusInternalServerError)
 		return
 	} else if !exists {
-		w.WriteHeader(http.StatusNotFound)
+		http.Error(w, "Photo not found.", http.StatusNotFound)
 		return
 	}
 
 	// Check if the user ID of the user who commented the photo exists
-	if exists, err := rt.db.UserExists(comment.Owner); err != nil {
+	if exists, err := rt.db.UserExists(commentRequest.Owner); err != nil {
 		ctx.Logger.WithError(err).Error("can't check if the user exists")
-		w.WriteHeader(http.StatusInternalServerError)
+		http.Error(w, "Error checking if the user exists.", http.StatusInternalServerError)
 		return
 	} else if !exists {
-		w.WriteHeader(http.StatusBadRequest)
+		http.Error(w, "User commenting the photo does not exist.", http.StatusBadRequest)
 		return
 	}
 
 	// Check if the comment length is between 1 and 128 bytes
-	if len(comment.Content) == 0 || len(comment.Content) > 128 {
-		w.WriteHeader(http.StatusBadRequest)
+	if !checkCommentContentFormat(commentRequest.Content) {
+		http.Error(w, "Invalid comment content format.", http.StatusBadRequest)
 		return
 	}
 
 	// Try to create the comment
-	err := rt.db.CreateComment(ownerId, photoId, comment.Owner, comment.Content)
+	newCommentId, err := rt.db.CreateComment(photoOwner, photoId, commentRequest.Owner, commentRequest.Content)
 	if err != nil {
 		ctx.Logger.WithError(err).Error("can't create the comment")
-		w.WriteHeader(http.StatusInternalServerError)
+		http.Error(w, "Error creating the comment.", http.StatusInternalServerError)
 		return
 	}
 
+	var commentOwner User
+	commentOwner.Id = commentRequest.Owner
+	commentOwner.Username, err = rt.db.GetUsername(commentRequest.Owner)
+	if err != nil {
+		ctx.Logger.WithError(err).Error("can't get the username of the comment owner")
+		http.Error(w, "Error getting the username of the comment owner.", http.StatusInternalServerError)
+		return
+	}
+
+	newComment := Comment{
+		Owner:   commentOwner,
+		Photo:   GlobalPhotoId{photoOwner, photoId},
+		Id:      newCommentId,
+		Content: commentRequest.Content,
+	}
+
 	w.WriteHeader(201)
+	w.Header().Set("Content-Type", "application/json")
+	err = json.NewEncoder(w).Encode(newComment)
+	if err != nil {
+		ctx.Logger.WithError(err).Error("can't encode the response")
+		http.Error(w, "Error encoding the response body.", http.StatusInternalServerError)
+		return
+	}
 }
 
 func (rt *_router) uncommentPhotoHandler(w http.ResponseWriter, r *http.Request, ps httprouter.Params, ctx reqcontext.RequestContext) {
 
 	// Get the parameters
-	var ownerId, photoId, commentId int64
+	var photoOwner, photoId, commentId int64
 	if params, err := checkIds(ps.ByName("userId"), ps.ByName("photoId"), ps.ByName("commentId")); err != nil {
-		w.WriteHeader(http.StatusBadRequest)
+		http.Error(w, "Missing or invalid parameters.", http.StatusBadRequest)
 		return
 	} else {
-		ownerId, photoId, commentId = params[0], params[1], params[2]
+		photoOwner, photoId, commentId = params[0], params[1], params[2]
 	}
 
 	// Check if the comment exists
-	if exists, err := rt.db.CommentExists(ownerId, photoId, commentId); err != nil {
+	if exists, err := rt.db.CommentExists(photoOwner, photoId, commentId); err != nil {
 		ctx.Logger.WithError(err).Error("can't check if the comment exists")
-		w.WriteHeader(http.StatusInternalServerError)
+		http.Error(w, "Error checking if the comment exists.", http.StatusInternalServerError)
 		return
 	} else if !exists {
-		w.WriteHeader(http.StatusNotFound)
+		http.Error(w, "Comment does not exists.", http.StatusNotFound)
 		return
 	}
 
 	// Get the user ID of the comment owner
-	commentOwner, err := rt.db.GetCommentOwner(ownerId, photoId, commentId)
+	commentOwner, err := rt.db.GetCommentOwner(photoOwner, photoId, commentId)
 	if err != nil {
 		ctx.Logger.WithError(err).Error("can't get the comment owner")
-		w.WriteHeader(http.StatusInternalServerError)
+		http.Error(w, "Error getting the comment owner.", http.StatusInternalServerError)
 		return
 	}
 
 	// Authorization check
 	if !checkBearer(r.Header.Get("Authorization"), commentOwner) {
-		w.WriteHeader(http.StatusUnauthorized)
+		http.Error(w, "Unauthorized.", http.StatusUnauthorized)
 		return
 	}
 
 	// Try to delete the comment
-	err = rt.db.DeleteComment(ownerId, photoId, commentId)
+	err = rt.db.DeleteComment(photoOwner, photoId, commentId)
 	if err != nil {
 		ctx.Logger.WithError(err).Error("can't delete the comment")
-		w.WriteHeader(http.StatusInternalServerError)
+		http.Error(w, "Error deleting the comment.", http.StatusInternalServerError)
 		return
 	}
 
-	w.WriteHeader(200)
+	w.WriteHeader(204)
 }
 
 func (rt *_router) getCommentsHandler(w http.ResponseWriter, r *http.Request, ps httprouter.Params, ctx reqcontext.RequestContext) {
 
 	// Get the parameters
-	var ownerId, photoId int64
+	var photoOwner, photoId int64
 	if params, err := checkIds(ps.ByName("userId"), ps.ByName("photoId")); err != nil {
-		w.WriteHeader(http.StatusBadRequest)
+		http.Error(w, "Missing or invalid parameters.", http.StatusBadRequest)
 		return
 	} else {
-		ownerId, photoId = params[0], params[1]
+		photoOwner, photoId = params[0], params[1]
 	}
 
 	// Check if the user requesting the profile is not banned by the user whose profile is being requested
 	// The check is made using the Authorization header
-	requesterId, err := getUserIdFromBearer(r.Header.Get("Authorization"))
-	if err != nil {
-		w.WriteHeader(http.StatusUnauthorized)
+	banExists, err := checkBan(rt.db, r.Header.Get("Authorization"), photoOwner)
+	switch {
+	case errors.Is(err, ErrInvalidBearer):
+		http.Error(w, "Invalid Bearer token.", http.StatusUnauthorized)
 		return
-	}
-	banCheck, err := rt.db.BanExists(ownerId, requesterId)
-	if err != nil {
+	case err != nil:
 		ctx.Logger.WithError(err).Error("can't check if the user is banned")
-		w.WriteHeader(http.StatusInternalServerError)
+		http.Error(w, "Error checking if the user is banned.", http.StatusInternalServerError)
 		return
-	} else if banCheck {
-		w.WriteHeader(http.StatusForbidden)
+	case banExists:
+		http.Error(w, "User is banned by the owner of the photo.", http.StatusForbidden)
 		return
 	}
 
 	// Check if the photo exists
-	if exists, err := rt.db.PhotoExists(ownerId, photoId); err != nil {
+	if exists, err := rt.db.PhotoExists(photoOwner, photoId); err != nil {
 		ctx.Logger.WithError(err).Error("can't check if the photo exists")
-		w.WriteHeader(http.StatusInternalServerError)
+		http.Error(w, "Error checking if the photo exists.", http.StatusInternalServerError)
 		return
 	} else if !exists {
-		w.WriteHeader(http.StatusNotFound)
+		http.Error(w, "Photo not found.", http.StatusNotFound)
 		return
 	}
 
 	// Try to get the comments of the photo
-	comments, err := rt.db.GetComments(ownerId, photoId)
+	comments, err := rt.db.GetPhotoComments(photoOwner, photoId)
 	if err != nil {
 		ctx.Logger.WithError(err).Error("can't get the comments of the photo")
-		w.WriteHeader(http.StatusInternalServerError)
+		http.Error(w, "Error getting the comments of the photo.", http.StatusInternalServerError)
 		return
 	}
 
-	var resolvedComments []ResolvedComment
-	resolvedComments = make([]ResolvedComment, len(comments))
+	// Verify the number of comments
+	if len(comments) > maxCommentCount {
+		comments = comments[:maxCommentCount]
+	}
+
+	var photoComments PhotoComments
+	photoComments.Comments = make([]Comment, len(comments))
 	for i, comment := range comments {
-		user, err := rt.db.GetUsername(comment.Owner)
+		username, err := rt.db.GetUsername(comment.CommentOwner)
 		if err != nil {
 			ctx.Logger.WithError(err).Error("can't get resolve the user of a comment")
-			w.WriteHeader(http.StatusInternalServerError)
+			http.Error(w, "Error getting the username of a comment owner.", http.StatusInternalServerError)
 			return
 		}
-		resolvedComments[i] = ResolvedComment{
-			User:    user,
+		photoComments.Comments[i] = Comment{
+			Owner:   User{Id: comment.CommentOwner, Username: username},
+			Photo:   GlobalPhotoId{photoOwner, photoId},
+			Id:      comment.CommentId,
 			Content: comment.Content,
 		}
 	}
 
 	w.Header().Set("Content-Type", "application/json")
 	w.WriteHeader(200)
-	err = json.NewEncoder(w).Encode(resolvedComments)
+	err = json.NewEncoder(w).Encode(photoComments)
 	if err != nil {
 		ctx.Logger.WithError(err).Error("can't encode the comments")
-		w.WriteHeader(http.StatusInternalServerError)
+		http.Error(w, "Error encoding the response body.", http.StatusInternalServerError)
 		return
 	}
 }
